--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
-./ghost-install/group_vars/all.yml
+# Files that don't need to be in Git:
+.DS_Store
+.vagrant
+*.retry
+temp
+
+# Things we really don't need stored in GitHub:
+ghost-install/group_vars/all.yml
